<resources>
    <string name="app_name">Chat</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_phone">手机号注册</string>
    <string name="nickname_lable">昵称</string>
    <string name="nickname_eg">例如: 陈晨</string>
    <string name="phone">手机号</string>
    <string name="phone_eg">请填写手机号</string>
    <string name="password">密码</string>
    <string name="password_eg">填写密码</string>
    <string name="nation_district">国家/地区</string>
    <string name="read_agree">已阅读并同意</string>
    <string name="agreement">《微信软件许可及服务协议》</string>
    <string name="next_step">下一步</string>
    <string name="other_login">用微信号/QQ号/邮箱登录</string>
    <string name="chat">微信</string>
    <string name="contacts">通讯录</string>
    <string name="discover">发现</string>
    <string name="me">我</string>
</resources>
