<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/graywhite">
        <com.zxp.chat.widget.ButtonItemView
            android:id="@+id/btn_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:lable="@string/chat">

        </com.zxp.chat.widget.ButtonItemView>

        <com.zxp.chat.widget.ButtonItemView
            android:id="@+id/btn_contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:lable="@string/contacts">

        </com.zxp.chat.widget.ButtonItemView>

        <com.zxp.chat.widget.ButtonItemView
            android:id="@+id/btn_discover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:lable="@string/discover">

        </com.zxp.chat.widget.ButtonItemView>

        <com.zxp.chat.widget.ButtonItemView
            android:id="@+id/btn_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:lable="@string/me">

        </com.zxp.chat.widget.ButtonItemView>
    </LinearLayout>

</LinearLayout>